# SoftwareRenderer

./: CMakeLists.txt  cleanbuild.sh  main.c
src/: camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
